CHANGES
=======

0.1b11 (unreleased)
-------------------

- Nothing changed yet.


0.1b10 (2019-03-21)
-------------------

- Drop support for Python 2.5, 2.6.
- Prefer 'olefile' to 'OleFileIO_PL'.
- Fix 'Dutmal' control attribute names.
- hwp5html: represent path names in bytes
- Declare some dependencies with environment markers: olefile, lxml, pycrypto
- Update dependency on hypua2jamo >= 0.4.4


0.1b9 (2016-02-26)
------------------

- hwp5html: serveral improvements
  - lang-* classes of span elements and associated css font-family
  - horizontal page layouts
  - Single page layout
  - enhance horizontal positioning of TableControl, GShapeObject
- distdoc: fix sha1offset (by Hodong Kim)

0.1b8 (2014-11-03)
------------------

- hwp5view: experimental viewer with webkitgtk+
- hwp5proc: xml --formats ("flat", "nested")
- hwp5proc: models --events (experimental)
- hwp5proc: models --seqno --format (incompatible changes)
- hwp5proc: find --from-stdin
- hwp5proc: find --format
- binmodels: GShapeObjectCaption
- olestorage: Gsf implementation through python-gi
- olestorage: use new olefile instead of OleFileIO_PL


0.1b7 (2014-01-31)
------------------

- support distribution docs. (based on `Changwoo Ryu's algorithm <https://groups.google.com/forum/#!topic/hwp-foss/d2KL2ypR89Q>`_)

0.1b6 (2014-01-20)
------------------

- binmodel: change type of TableCell dimensions to signed integer
- hwp5odt: fix NCName for style:name (close #140)
- hwp5proc: fix with-statement in 'xml' command for Python 2.5
- hwp5proc: mark 'xml' command experimental

0.1b5 (2013-10-29)
------------------

- close #134
- hwp5html generates .xhtml instead of .html
- hwp5proc: new '--no-xml-decl' option
- hwp5odt: fix to not use '/' in resulting style names
- hwp5proc: IdMappings.memoshape only if version > 5.0.1.6

0.1b4 (2013-07-03)
------------------

- hwp5proc records: new option '--raw-header'
- hwp5odt: new '--document' option produces single ODT XML files (``*.fodt``)