@@ -14,5 +14,4 @@ ipaddress==1.0.22         # via cryptography
 lxml==4.2.4 ; platform_python_implementation == "CPython"
 olefile==0.44 ; platform_python_implementation != "Jython"
 pycparser==2.19           # via cffi
-pycrypto==2.6.1 ; platform_python_implementation == "CPython" and platform_system != "Windows"
 six==1.12.0               # via cryptography
