@@ -14,7 +14,6 @@ ipaddress==1.0.22         # via cryptography
 lxml==4.2.4 ; platform_python_implementation == "CPython"
 olefile==0.44 ; platform_python_implementation != "Jython"
 pycparser==2.19           # via cffi
-pycrypto==2.6.1 ; platform_python_implementation == "CPython" and platform_system != "Windows"
 six==1.10.0               # via cryptography, zope.testrunner
 zope.exceptions==4.1.0    # via zope.testrunner
 zope.interface==4.4.2     # via zope.exceptions, zope.testrunner
